# itmo-cxx-2024

./: .gitignore  README.md
Lab-1/: CMakeLists.txt  Report-1.md
Lab-1/src/: f.cpp  generator.cpp  generator.h  main.cpp  operations.txt  parser.h  variable-types.h
Lab-2/: CMakeLists.txt  Report-2.md
Lab-2/src/: main.cpp  number.cpp  number.h  test.cpp  test.h
Lab-3/: CMakeLists.txt  Report-3.md
Lab-3/src/: main.cpp  number.cpp  number.h  utilities.cpp  utilities.h  utils.h
Lab-4/: CMakeLists.txt  Report-4.md  comparison.py
Lab-4/include/: Matrix.h  Vector.h
Lab-4/src/: main.cpp
Lab-4/test/: CMakeLists.txt  MatrixOperationsTest.cpp  VectorOperationsTest.cpp
